--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,12 @@
-bowtie2
-Bwa-mem2
-fastp
-fastqc
-gatk
-gatk4
-qualimap
-somatic-sniper
-strelka
-picard
-qualimap
-varscan
-samtools
+bowtie2==2.4.2
+bwa-mem2==2.1
+fastp==0.20.1
+fastqc==0.11.9
+gatk==3.8
+gatk4==4.2.0.0
+qualimap==2.2.2d
+somatic-sniper==1.0.5.0
+strelka==2.9.10
+qualimap==2.2.2d
+varscan== 2.4.4
+samtools==1.11
