--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+picard	 2.25.0
 bowtie2==2.4.2
 bwa-mem2==2.1
 fastp==0.20.1
@@ -7,6 +8,7 @@ gatk4==4.2.0.0
 qualimap==2.2.2d
 somatic-sniper==1.0.5.0
 strelka==2.9.10
+picard==2.25.0
 qualimap==2.2.2d
 varscan== 2.4.4
 samtools==1.11
