Revert "Update environment.yml"
This reverts commit f5b1cc8b

--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-https://github.com/MBaysanLab/cosap/tree/pair_codingname: default
+name: default
 channels:
   - defaults
   - bioconda
@@ -13,10 +13,8 @@ dependencies:
   - qualimap
   - somatic-sniper
   - strelka
-  - picard
   - qualimap
   - varscan
   - samtools
 
 
-https://github.com/MBaysanLab/cosap/tree/pair_coding
