cleaning up preprocessors

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,10 @@ version: '3'
 
 services:
   cosap:
-     container_name: cosap
-     restart: always
+    build:
+      context: ./
+      dockerfile: Dockerfile
+    container_name: cosap
+    restart: always
+    command: tail -F anything
 
