--- a/snakemake_workflows/Snakefile
+++ b/snakemake_workflows/Snakefile
@@ -1,14 +1,18 @@
 import os
 from cosap._pipeline_config import PipelineKeys
 
+
 include: "./rules/mapper.smk"
 include: "./rules/preprocess.smk"
 include: "./rules/variantcaller.smk"
 
+
 configfile: "config.yaml"
+
 
 output_files = config[PipelineKeys.FINAL_OUTPUT]
 
+
 rule all:
     input:
-        expand("{output_file}", output_file=output_files)
+        expand("{output_file}", output_file=output_files),
