--- a/snakemake_workflows/config.yaml
+++ b/snakemake_workflows/config.yaml
@@ -1,48 +1,35 @@
 calibrate:
-  0A60:
-    input: mdup_0A60.bam
-    output: calibrated_0A60.bam
-    table: calibration_table_0A60.table
-  ACFC:
-    input: mdup_ACFC.bam
-    output: calibrated_ACFC.bam
-    table: calibration_table_ACFC.table
-creation-date: '2021-09-17 18:31:52'
+  7EC9:
+    input: mdup_7EC9.bam
+    output: calibrated_7EC9.bam
+    table: calibration_table_7EC9.table
+  B1EE:
+    input: mdup_B1EE.bam
+    output: calibrated_B1EE.bam
+    table: calibration_table_B1EE.table
+creation-date: '2021-09-17 19:18:24'
 final-output:
-- trimmed_ACFC_1.fastq.gz
-- trimmed_ACFC_2.fastq.gz
-- trimmed_0A60_1.fastq.gz
-- trimmed_0A60_2.fastq.gz
-- unprocessed_ACFC.bam
-- unprocessed_0A60.bam
-- mdup_ACFC.bam
-- mdup_0A60.bam
-- calibrated_ACFC.bam
-- calibrated_0A60.bam
-- snp_ACFC_0A60.vcf
-- snp_ACFC_0A60.vcf
+- trimmed_7EC9_1.fastq.gz
+- trimmed_7EC9_2.fastq.gz
+- trimmed_B1EE_1.fastq.gz
+- trimmed_B1EE_2.fastq.gz
+- unprocessed_7EC9.bam
+- unprocessed_B1EE.bam
+- mdup_7EC9.bam
+- mdup_B1EE.bam
+- calibrated_7EC9.bam
+- calibrated_B1EE.bam
+- snp_7EC9_B1EE.vcf
+- snp_7EC9_B1EE.vcf
 index: {}
 library_path: /home/mae/Desktop/hg38_bundle
 mapping:
-  0A60:
+  7EC9:
     input:
-      '1': trimmed_0A60_1.fastq.gz
-      '2': trimmed_0A60_2.fastq.gz
+      '1': trimmed_7EC9_1.fastq.gz
+      '2': trimmed_7EC9_2.fastq.gz
     library: bwa
-    output: unprocessed_0A60.bam
-    params:
-      read_groups:
-        ID: S13
-        LB: S13
-        PL: illumina
-        PU: '0'
-        SM: S13
-  ACFC:
-    input:
-      '1': trimmed_ACFC_1.fastq.gz
-      '2': trimmed_ACFC_2.fastq.gz
-    library: bwa
-    output: unprocessed_ACFC.bam
+    output: unprocessed_7EC9.bam
     params:
       read_groups:
         ID: Pt28N
@@ -50,52 +37,65 @@ mapping:
         PL: illumina
         PU: '0'
         SM: Pt28N
+  B1EE:
+    input:
+      '1': trimmed_B1EE_1.fastq.gz
+      '2': trimmed_B1EE_2.fastq.gz
+    library: bwa
+    output: unprocessed_B1EE.bam
+    params:
+      read_groups:
+        ID: S13
+        LB: S13
+        PL: illumina
+        PU: '0'
+        SM: S13
 mdup:
-  0A60:
-    input: unprocessed_0A60.bam
-    output: mdup_0A60.bam
-  ACFC:
-    input: unprocessed_ACFC.bam
-    output: mdup_ACFC.bam
+  7EC9:
+    input: unprocessed_7EC9.bam
+    output: mdup_7EC9.bam
+  B1EE:
+    input: unprocessed_B1EE.bam
+    output: mdup_B1EE.bam
 merge: {}
 sorting: {}
 trim:
-  0A60:
-    input:
-      '1': /media/mae/SeagateExpansionDrive/arif/case_1_biorep_a_wes/SRR3182433_1.fastq.gz
-      '2': /media/mae/SeagateExpansionDrive/arif/case_1_biorep_a_wes/SRR3182433_2.fastq.gz
-    output:
-      '1': trimmed_0A60_1.fastq.gz
-      '2': trimmed_0A60_2.fastq.gz
-  ACFC:
+  7EC9:
     input:
       '1': /media/mae/SeagateExpansionDrive/arif/case_1_germline_wes/SRR3182423_1.fastq.gz
       '2': /media/mae/SeagateExpansionDrive/arif/case_1_germline_wes/SRR3182423_2.fastq.gz
     output:
-      '1': trimmed_ACFC_1.fastq.gz
-      '2': trimmed_ACFC_2.fastq.gz
+      '1': trimmed_7EC9_1.fastq.gz
+      '2': trimmed_7EC9_2.fastq.gz
+  B1EE:
+    input:
+      '1': /media/mae/SeagateExpansionDrive/arif/case_1_biorep_a_wes/SRR3182433_1.fastq.gz
+      '2': /media/mae/SeagateExpansionDrive/arif/case_1_biorep_a_wes/SRR3182433_2.fastq.gz
+    output:
+      '1': trimmed_B1EE_1.fastq.gz
+      '2': trimmed_B1EE_2.fastq.gz
 variant-calling:
-  ACFC_0A60_mutect:
-    indel_output: indel_ACFC_0A60.vcf
+  7EC9_B1EE_mutect:
+    indel_output: indel_7EC9_B1EE.vcf
     library: mutect
-    normal_input: calibrated_ACFC.bam
-    other_variants_output: other_variants_ACFC_0A60.vcf
+    normal_input: calibrated_7EC9.bam
+    other_variants_output: other_variants_7EC9_B1EE.vcf
     params:
       germline_sample_name: normal_sample
       tumor_sample_name: tumor_sample
-    snp_output: snp_ACFC_0A60.vcf
-    tumor_input: calibrated_0A60.bam
-    unfiltered_variants: all_ACFC_0A60.vcf
-  ACFC_0A60_varscan:
-    indel_output: indel_ACFC_0A60.vcf
+    snp_output: snp_7EC9_B1EE.vcf
+    tumor_input: calibrated_B1EE.bam
+    unfiltered_variants: all_7EC9_B1EE.vcf
+  7EC9_B1EE_varscan:
+    indel_output: indel_7EC9_B1EE.vcf
     library: varscan
-    normal_input: calibrated_ACFC.bam
-    other_variants_output: other_variants_ACFC_0A60.vcf
+    normal_input: calibrated_7EC9.bam
+    other_variants_output: other_variants_7EC9_B1EE.vcf
     params:
       germline_sample_name: normal_sample
       tumor_sample_name: tumor_sample
-    snp_output: snp_ACFC_0A60.vcf
-    tumor_input: calibrated_0A60.bam
-    unfiltered_variants: all_ACFC_0A60.vcf
+    snp_output: snp_7EC9_B1EE.vcf
+    tumor_input: calibrated_B1EE.bam
+    unfiltered_variants: all_7EC9_B1EE.vcf
 version: 0.0.1
 workdir: /media/mae/SeagateExpansionDrive/arif/pipeline_reproduce/
