--- a/snakemake_workflows/config.yaml
+++ b/snakemake_workflows/config.yaml
@@ -1,48 +1,35 @@
 calibrate:
-  7EC9:
-    input: mdup_7EC9.bam
-    output: calibrated_7EC9.bam
-    table: calibration_table_7EC9.table
-  B1EE:
-    input: mdup_B1EE.bam
-    output: calibrated_B1EE.bam
-    table: calibration_table_B1EE.table
-creation-date: '2021-09-17 19:18:24'
+  176C:
+    input: mdup_176C.bam
+    output: calibrated_176C.bam
+    table: calibration_table_176C.table
+  A4F6:
+    input: mdup_A4F6.bam
+    output: calibrated_A4F6.bam
+    table: calibration_table_A4F6.table
+creation-date: '2021-09-17 19:33:58'
 final-output:
-- trimmed_7EC9_1.fastq.gz
-- trimmed_7EC9_2.fastq.gz
-- trimmed_B1EE_1.fastq.gz
-- trimmed_B1EE_2.fastq.gz
-- unprocessed_7EC9.bam
-- unprocessed_B1EE.bam
-- mdup_7EC9.bam
-- mdup_B1EE.bam
-- calibrated_7EC9.bam
-- calibrated_B1EE.bam
-- snp_7EC9_B1EE.vcf
-- snp_7EC9_B1EE.vcf
+- trimmed_A4F6_1.fastq.gz
+- trimmed_A4F6_2.fastq.gz
+- trimmed_176C_1.fastq.gz
+- trimmed_176C_2.fastq.gz
+- unprocessed_A4F6.bam
+- unprocessed_176C.bam
+- mdup_A4F6.bam
+- mdup_176C.bam
+- calibrated_A4F6.bam
+- calibrated_176C.bam
+- snp_A4F6_176C.vcf
+- snp_A4F6_176C.vcf
 index: {}
 library_path: /home/mae/Desktop/hg38_bundle
 mapping:
-  7EC9:
+  176C:
     input:
-      '1': trimmed_7EC9_1.fastq.gz
-      '2': trimmed_7EC9_2.fastq.gz
+      '1': trimmed_176C_1.fastq.gz
+      '2': trimmed_176C_2.fastq.gz
     library: bwa
-    output: unprocessed_7EC9.bam
-    params:
-      read_groups:
-        ID: Pt28N
-        LB: Pt28N
-        PL: illumina
-        PU: '0'
-        SM: Pt28N
-  B1EE:
-    input:
-      '1': trimmed_B1EE_1.fastq.gz
-      '2': trimmed_B1EE_2.fastq.gz
-    library: bwa
-    output: unprocessed_B1EE.bam
+    output: unprocessed_176C.bam
     params:
       read_groups:
         ID: S13
@@ -50,52 +37,65 @@ mapping:
         PL: illumina
         PU: '0'
         SM: S13
+  A4F6:
+    input:
+      '1': trimmed_A4F6_1.fastq.gz
+      '2': trimmed_A4F6_2.fastq.gz
+    library: bwa
+    output: unprocessed_A4F6.bam
+    params:
+      read_groups:
+        ID: Pt28N
+        LB: Pt28N
+        PL: illumina
+        PU: '0'
+        SM: Pt28N
 mdup:
-  7EC9:
-    input: unprocessed_7EC9.bam
-    output: mdup_7EC9.bam
-  B1EE:
-    input: unprocessed_B1EE.bam
-    output: mdup_B1EE.bam
+  176C:
+    input: unprocessed_176C.bam
+    output: mdup_176C.bam
+  A4F6:
+    input: unprocessed_A4F6.bam
+    output: mdup_A4F6.bam
 merge: {}
 sorting: {}
 trim:
-  7EC9:
-    input:
-      '1': /media/mae/SeagateExpansionDrive/arif/case_1_germline_wes/SRR3182423_1.fastq.gz
-      '2': /media/mae/SeagateExpansionDrive/arif/case_1_germline_wes/SRR3182423_2.fastq.gz
-    output:
-      '1': trimmed_7EC9_1.fastq.gz
-      '2': trimmed_7EC9_2.fastq.gz
-  B1EE:
+  176C:
     input:
       '1': /media/mae/SeagateExpansionDrive/arif/case_1_biorep_a_wes/SRR3182433_1.fastq.gz
       '2': /media/mae/SeagateExpansionDrive/arif/case_1_biorep_a_wes/SRR3182433_2.fastq.gz
     output:
-      '1': trimmed_B1EE_1.fastq.gz
-      '2': trimmed_B1EE_2.fastq.gz
+      '1': trimmed_176C_1.fastq.gz
+      '2': trimmed_176C_2.fastq.gz
+  A4F6:
+    input:
+      '1': /media/mae/SeagateExpansionDrive/arif/case_1_germline_wes/SRR3182423_1.fastq.gz
+      '2': /media/mae/SeagateExpansionDrive/arif/case_1_germline_wes/SRR3182423_2.fastq.gz
+    output:
+      '1': trimmed_A4F6_1.fastq.gz
+      '2': trimmed_A4F6_2.fastq.gz
 variant-calling:
-  7EC9_B1EE_mutect:
-    indel_output: indel_7EC9_B1EE.vcf
+  A4F6_176C_mutect:
+    indel_output: indel_A4F6_176C.vcf
     library: mutect
-    normal_input: calibrated_7EC9.bam
-    other_variants_output: other_variants_7EC9_B1EE.vcf
+    normal_input: calibrated_A4F6.bam
+    other_variants_output: other_variants_A4F6_176C.vcf
     params:
       germline_sample_name: normal_sample
       tumor_sample_name: tumor_sample
-    snp_output: snp_7EC9_B1EE.vcf
-    tumor_input: calibrated_B1EE.bam
-    unfiltered_variants: all_7EC9_B1EE.vcf
-  7EC9_B1EE_varscan:
-    indel_output: indel_7EC9_B1EE.vcf
+    snp_output: snp_A4F6_176C.vcf
+    tumor_input: calibrated_176C.bam
+    unfiltered_variants: all_A4F6_176C.vcf
+  A4F6_176C_varscan:
+    indel_output: indel_A4F6_176C.vcf
     library: varscan
-    normal_input: calibrated_7EC9.bam
-    other_variants_output: other_variants_7EC9_B1EE.vcf
+    normal_input: calibrated_A4F6.bam
+    other_variants_output: other_variants_A4F6_176C.vcf
     params:
       germline_sample_name: normal_sample
       tumor_sample_name: tumor_sample
-    snp_output: snp_7EC9_B1EE.vcf
-    tumor_input: calibrated_B1EE.bam
-    unfiltered_variants: all_7EC9_B1EE.vcf
+    snp_output: snp_A4F6_176C.vcf
+    tumor_input: calibrated_176C.bam
+    unfiltered_variants: all_A4F6_176C.vcf
 version: 0.0.1
 workdir: /media/mae/SeagateExpansionDrive/arif/pipeline_reproduce/
