--- a/snakemake_workflows/config.yaml
+++ b/snakemake_workflows/config.yaml
@@ -1,48 +1,23 @@
+annotation: {}
 calibrate:
-  176C:
-    input: mdup_176C.bam
-    output: calibrated_176C.bam
-    table: calibration_table_176C.table
-  A4F6:
-    input: mdup_A4F6.bam
-    output: calibrated_A4F6.bam
-    table: calibration_table_A4F6.table
-creation-date: '2021-09-17 19:33:58'
-final-output:
-- trimmed_A4F6_1.fastq.gz
-- trimmed_A4F6_2.fastq.gz
-- trimmed_176C_1.fastq.gz
-- trimmed_176C_2.fastq.gz
-- unprocessed_A4F6.bam
-- unprocessed_176C.bam
-- mdup_A4F6.bam
-- mdup_176C.bam
-- calibrated_A4F6.bam
-- calibrated_176C.bam
-- snp_A4F6_176C.vcf
-- snp_A4F6_176C.vcf
+  SRR3182423_1_SRR3182423_2:
+    input: mdup_SRR3182423_1_SRR3182423_2.bam
+    output: calibrated_SRR3182423_1_SRR3182423_2.bam
+    table: calibration_table_SRR3182423_1_SRR3182423_2.table
+  SRR3182433_1_SRR3182433_2:
+    input: mdup_SRR3182433_1_SRR3182433_2.bam
+    output: calibrated_SRR3182433_1_SRR3182433_2.bam
+    table: calibration_table_SRR3182433_1_SRR3182433_2.table
+creation-date: '2021-11-02 14:49:23'
 index: {}
-library_path: /home/mae/Desktop/hg38_bundle
+library_path: /media/bioinformaticslab/Elements/arif/hg38_bundle
 mapping:
-  176C:
+  SRR3182423_1_SRR3182423_2:
     input:
-      '1': trimmed_176C_1.fastq.gz
-      '2': trimmed_176C_2.fastq.gz
+      '1': trimmed_SRR3182423_1.fastq.gz
+      '2': trimmed_SRR3182423_2.fastq.gz
     library: bwa
-    output: unprocessed_176C.bam
-    params:
-      read_groups:
-        ID: S13
-        LB: S13
-        PL: illumina
-        PU: '0'
-        SM: S13
-  A4F6:
-    input:
-      '1': trimmed_A4F6_1.fastq.gz
-      '2': trimmed_A4F6_2.fastq.gz
-    library: bwa
-    output: unprocessed_A4F6.bam
+    output: unprocessed_SRR3182423_1_SRR3182423_2.bam
     params:
       read_groups:
         ID: Pt28N
@@ -50,52 +25,65 @@ mapping:
         PL: illumina
         PU: '0'
         SM: Pt28N
+  SRR3182433_1_SRR3182433_2:
+    input:
+      '1': trimmed_SRR3182433_1.fastq.gz
+      '2': trimmed_SRR3182433_2.fastq.gz
+    library: bwa
+    output: unprocessed_SRR3182433_1_SRR3182433_2.bam
+    params:
+      read_groups:
+        ID: S13
+        LB: S13
+        PL: illumina
+        PU: '0'
+        SM: S13
 mdup:
-  176C:
-    input: unprocessed_176C.bam
-    output: mdup_176C.bam
-  A4F6:
-    input: unprocessed_A4F6.bam
-    output: mdup_A4F6.bam
+  SRR3182423_1_SRR3182423_2:
+    input: unprocessed_SRR3182423_1_SRR3182423_2.bam
+    output: mdup_SRR3182423_1_SRR3182423_2.bam
+  SRR3182433_1_SRR3182433_2:
+    input: unprocessed_SRR3182433_1_SRR3182433_2.bam
+    output: mdup_SRR3182433_1_SRR3182433_2.bam
 merge: {}
 sorting: {}
 trim:
-  176C:
-    input:
-      '1': /media/mae/SeagateExpansionDrive/arif/case_1_biorep_a_wes/SRR3182433_1.fastq.gz
-      '2': /media/mae/SeagateExpansionDrive/arif/case_1_biorep_a_wes/SRR3182433_2.fastq.gz
-    output:
-      '1': trimmed_176C_1.fastq.gz
-      '2': trimmed_176C_2.fastq.gz
-  A4F6:
+  SRR3182423_1_SRR3182423_2:
     input:
       '1': /media/mae/SeagateExpansionDrive/arif/case_1_germline_wes/SRR3182423_1.fastq.gz
       '2': /media/mae/SeagateExpansionDrive/arif/case_1_germline_wes/SRR3182423_2.fastq.gz
     output:
-      '1': trimmed_A4F6_1.fastq.gz
-      '2': trimmed_A4F6_2.fastq.gz
+      '1': trimmed_SRR3182423_1.fastq.gz
+      '2': trimmed_SRR3182423_2.fastq.gz
+  SRR3182433_1_SRR3182433_2:
+    input:
+      '1': /media/mae/SeagateExpansionDrive/arif/case_1_biorep_a_wes/SRR3182433_1.fastq.gz
+      '2': /media/mae/SeagateExpansionDrive/arif/case_1_biorep_a_wes/SRR3182433_2.fastq.gz
+    output:
+      '1': trimmed_SRR3182433_1.fastq.gz
+      '2': trimmed_SRR3182433_2.fastq.gz
 variant-calling:
-  A4F6_176C_mutect:
-    indel_output: indel_A4F6_176C.vcf
+  mutect:
+    indel_output: indel_mutect.vcf
     library: mutect
-    normal_input: calibrated_A4F6.bam
-    other_variants_output: other_variants_A4F6_176C.vcf
+    normal_input: calibrated_SRR3182423_1_SRR3182423_2.bam
+    other_variants_output: other_variants_mutect.vcf
     params:
       germline_sample_name: normal_sample
       tumor_sample_name: tumor_sample
-    snp_output: snp_A4F6_176C.vcf
-    tumor_input: calibrated_176C.bam
-    unfiltered_variants: all_A4F6_176C.vcf
-  A4F6_176C_varscan:
-    indel_output: indel_A4F6_176C.vcf
+    snp_output: snp_mutect.vcf
+    tumor_input: calibrated_SRR3182433_1_SRR3182433_2.bam
+    unfiltered_variants: all_mutect.vcf
+  varscan:
+    indel_output: indel_varscan.vcf
     library: varscan
-    normal_input: calibrated_A4F6.bam
-    other_variants_output: other_variants_A4F6_176C.vcf
+    normal_input: calibrated_SRR3182423_1_SRR3182423_2.bam
+    other_variants_output: other_variants_varscan.vcf
     params:
       germline_sample_name: normal_sample
       tumor_sample_name: tumor_sample
-    snp_output: snp_A4F6_176C.vcf
-    tumor_input: calibrated_176C.bam
-    unfiltered_variants: all_A4F6_176C.vcf
+    snp_output: snp_varscan.vcf
+    tumor_input: calibrated_SRR3182433_1_SRR3182433_2.bam
+    unfiltered_variants: all_varscan.vcf
 version: 0.0.1
 workdir: /media/mae/SeagateExpansionDrive/arif/pipeline_reproduce/
