--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,6 @@ black=20.8b1=pypi_0
 bowtie2=2.2.5=py39h7cff6ad_8
 bwa=0.7.17=h5bf99c6_8
 bwa-mem2=2.2.1=h9a82719_1
-bzip2=1.0.8=h7f98852_4
 fastp=0.20.1=h2e03b76_1
 fastqc=0.11.9=hdfd78af_1
 gatk4=4.2.2.0=hdfd78af_0
@@ -12,14 +11,11 @@ make=4.3=hd18ef5c_1
 mamba=0.17.0=py39h951de11_0
 numpy=1.21.2=pypi_0
 octopus=0.7.4=h40a150c_0
-openjdk=8.0.302=h7f98852_0
-openssl=1.1.1l=h7f98852_0
-python=3.9.7=hb7a2778_3_cpython
+pyyaml=5.4.1=pypi_0
 qualimap=2.2.2a=1
 samtools=1.12=h9aed4be_1
+snakefmt=0.4.2=pypi_0
 snakemake=6.7.0=pypi_0
 somatic-sniper=1.0.5.0=0
 tqdm=4.62.3=pyhd8ed1ab_0
-varscan=2.4.4=hdfd78af_1
-venn=0.1.3=pypi_0
 yaml=0.2.5=h516909a_0
