add germline callers

--- a/snakemake_workflows/Snakefile
+++ b/snakemake_workflows/Snakefile
@@ -5,6 +5,7 @@ from cosap._pipeline_config import PipelineKeys
 include: "rules/mapper.smk"
 include: "rules/preprocess.smk"
 include: "rules/variantcaller.smk"
+include: "rules/annotator.smk"
 
 
 workdir: config[PipelineKeys.WORKDIR]
