--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,28 @@
 python==3.9
-bbmap
-bowtie2
-bwa
-bwa-mem2
-fastp
-fastqc
-gatk4
-octopus
-picard
-qualimap
+bbmap==39.01
+bowtie2==2.5.0
+bwa==0.7.17
+bwa-mem2==2.2.1
+fastp==0.23.2
+fastqc==0.11.9
+gatk4==4.3.0.0
+octopus==0.6.3b
+picard==2.18.7
+qualimap==2.2.2d
 samtools
-somatic-sniper
+somatic-sniper==1.0.5.0
 tqdm
-varscan
+varscan==2.4.4
 yaml
 black
 numpy
 pillow
 pygraphviz
 snakefmt
-snakemake
-elprep
-muse
-vardict-java
-snpeff
+snakemake==7.18.2
+elprep==5.1.3
+vardict-java==1.8.3
+snpeff==5.1
 perl-dbi
 perl-lwp-simple
 conda
