--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-python==3.9
+python==3.9.15
 bbmap==39.01
 bowtie2==2.5.0
 bwa==0.7.17
@@ -6,10 +6,9 @@ bwa-mem2==2.2.1
 fastp==0.23.2
 fastqc==0.11.9
 gatk4==4.3.0.0
-octopus==0.6.3b
-picard==2.18.7
+picard==2.27.4
 qualimap==2.2.2d
-samtools
+samtools==1.16.1
 somatic-sniper==1.0.5.0
 tqdm
 varscan==2.4.4
