Adding Gene Fusion callers to cosap and GeneFuse

--- a/snakemake_workflows/Snakefile
+++ b/snakemake_workflows/Snakefile
@@ -4,7 +4,7 @@ from cosap._pipeline_config import PipelineKeys
 
 include: "rules/mapper.smk"
 include: "rules/preprocess.smk"
-include: "rules/variantcaller.smk"
+include: "rules/callers.smk"
 include: "rules/annotator.smk"
 
 
