--- a/pytest.ini
+++ b/pytest.ini
@@ -1,8 +1,12 @@
 [pytest]
 markers = 
-    library
-    pipeline
-    minute_long
+    functional
+    unit
+    integration
 
 tmp_path_retention_count = 3
 tmp_path_retention_policy = all
+
+filterwarnings =
+    ignore::DeprecationWarning:pyranges
+    ignore::DeprecationWarning:pkg_resources
