Improving cli and tools

--- a/pytest.ini
+++ b/pytest.ini
@@ -10,3 +10,4 @@ tmp_path_retention_policy = all
 filterwarnings =
     ignore::DeprecationWarning:pyranges
     ignore::DeprecationWarning:pkg_resources
+    ignore::DeprecationWarning:upsetplot
