--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ bwa==0.7.17
 bwa-mem2==2.2.1
 fastp==0.23.2
 fastqc==0.11.9
-gatk4==4.5.0.0
+gatk4==4.6.1.0
 picard==3.*
 qualimap==2.2.2d
 samtools==1.20.*
@@ -39,3 +39,4 @@ matplotlib-venn
 celery
 redis-py
 docker-py
+python-dotenv
